update and bug fix

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -20,6 +20,15 @@ a:active,
 a.active {
   color: #18BC9C;
 }
+
+.anchor > a,
+a:hover,
+a:focus,
+a:active,
+a.active {
+  color: #fffff5;
+}
+
 h1,
 h2,
 h3,
